updated index.html to maintain consistency in id naming convention, added event listner layout to script.js plus additional pseudo code.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <section id="search">
                 <!-- SECTION FOR CITY SEARCH -->
                 <form id="searchForm">
-                    <input id="city-search" type="text" placeholder="For what city would you like the 5-day forecast?" required>
+                    <input id="cityName" type="text" placeholder="For what city would you like the 5-day forecast?" required>
                     <button type="submit">Search</button>
                 </form>
                 <!-- SECTION FOR SEARCH HISTORY -->
