--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <title>Local Weather Dashboard</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
         <link rel="stylesheet" href="./assets/styles/styles.css">
     </head>
     <body>
@@ -32,23 +33,26 @@
                 <div id="searchHistory"></div>
             </section>
             
-            <!-- SECTION FOR CURRENT WEATHER -->
-            <section id="currentWeather">
-                <h2>Selected City</h2>
-                <h3>Current Date | Current Time</h3>
-            </section>
+            <section id="weather">
+                <!-- SECTION FOR CURRENT WEATHER -->
+                <div id="currentWeather">
+                    <h2>Selected City</h2>
+                    <h3>Current Date | Current Time</h3>
+                </div>
 
-            <!-- SECTION FOR CURRENT DAY FORECAST -->
-            <section id="currentForecast">
-                <h2>Today's Forecast</h2>
-            </section>
+                <!-- SECTION FOR CURRENT DAY FORECAST -->
+                <div id="currentForecast">
+                    <h2>Today's Forecast</h2>
+                </div>
 
-            <!-- SECTION FOR FUTURE FORECAST -->
-            <section id="futureForecast">
-                <h2>Looking Forward</h2>
+                <!-- SECTION FOR FUTURE FORECAST -->
+                <div id="futureForecast">
+                    <h2>Looking Forward</h2>
+                </div>
             </section>
         </main>
         
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
         <script src="./assets/js/script.js" async defer></script>
     </body>
 </html>
